add homepage and index view

--- a/poll/templates/index.html
+++ b/poll/templates/index.html
@@ -49,7 +49,7 @@
         <!--ending the forloop-->
         <h1>This is for the question loop</h1>
 
-        {% for q in quest%}
+        {% for q in question %}
         <h2>{{q.question}}</h2>
         <h2>{{q.teacher}}</h2>
             {% for a in answers %}
