worked on some templates and views

--- a/poll/templates/home.html
+++ b/poll/templates/home.html
@@ -5,7 +5,7 @@
     <title>Enter</title>
 </head>
 <body>
-    <a href="{% url poll:index %}">Student</a>
+    <a href="{% url 'poll:index' %}">Student</a>
     <a href="">Teacher</a>
 </body>
 </html>
