--- a/poll/templates/home.html
+++ b/poll/templates/home.html
@@ -5,7 +5,12 @@
     <title>Enter</title>
 </head>
 <body>
-    <a href="{% url 'poll:index' %}">Student</a>
-    <a href="">Teacher</a>
+    <!-- the name after url is the value we passed to the "name" keyword argument of the url(), urls.py -->
+   
+    {% for q in questions %}
+    <h1>{{q.question}}</h1>
+    <button><a href="{% url 'poll:results' q.id %}">View Results</a></button>
+    <button><a href="{% url 'poll:poll' q.id %}">Vote</a></button>
+    {% endfor %}
 </body>
 </html>
