--- a/poll/templates/poll_results.html
+++ b/poll/templates/poll_results.html
@@ -5,5 +5,16 @@
     <title>Poll Results</title>
 </head>
 <body>
+
+    {% if answers %}
+    <!-- <p>My questions: {{ questions.id }}, {{answers.answer}}</p> -->
+   
+    {% for a in answers %}
+      <p>Answer: {{ a.answer }} {{a.votes}}</p>
+    {% endfor %}
+    
+   
+   
+{% endif %}
 </body>
 </html>
