--- a/poll/templates/index.html
+++ b/poll/templates/index.html
@@ -6,13 +6,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
 </head>
+<body>
     <h1>Polls</h1>
-
+    
     {% for q in questions %}
         <div class="question">
-            <h4><a href="{% url 'poll:poll' q.question_num %}">{{ q.question }} by {{ q.teacher }}</a></h4>
+            <h4>
+                <a href="{% url 'poll:test' %}">
+                {{ q.question }} by {{ q.teacher }}
+                </a>
+            </h4>
         </div>
     {% endfor %}
 </body>
-
 </html>
