--- a/poll/templates/poll_vote.html
+++ b/poll/templates/poll_vote.html
@@ -1,24 +1,17 @@
-<!DOCTYPE html>
-<html>
+{% extends "base.html" %}
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>Poll Vote</title>
-</head>
+<h4>{{ q.question }} by {{ q.teacher }}</h4>
 
-<body>
-    <h4>{{ q.question }} by {{ q.teacher }}</h4>
+<form method="POST">
+    {% csrf_token %}
+    {% for a in answers %}
+    <input type="radio" id="" name="answer" value="{{a.id}}">
+    <label for="">{{a.answer}}</label><br>
+    {% endfor %}
+    <input type="submit" value="submit">
+</form>
 
-    <form method="POST">
-        {% csrf_token %}
-        {% for a in answers %}
-        <input type="radio" id="" name="answer" value="{{a.id}}">
-        <label for="">{{a.answer}}</label><br>
-        {% endfor %}
-        <input type="submit" value="submit">
-    </form>
+<a href="{% url 'poll:results' q.id %}">Results</a>
 
-    <a href="{% url 'poll:results' q.id %}">Results</a>
-</body>
-
-</html>
+{% endblock %}
