--- a/poll/templates/teacher_create.html
+++ b/poll/templates/teacher_create.html
@@ -9,30 +9,40 @@
         <label for="question">Question:</label><br>
         <input type="text" id="question" name="question"><br>
         <label for="answer">Answer:</label><br>
-        <input type="text" id="answer" name="answer"><br>
+        <input type="text" id="firstAnswer" name="answer"><br>
         <input type="submit" value="Submit">
     </form>
     <button onclick="addAnswer()">Add Answer</button>
+    <button onclick="removeAnswer()">Remove Answer</button>
 </div>
 
 <script type="text/javascript">
+    function addAnswer() {
+        let newInput = document.getElementById("create_form")
+        // let label = document.createElement("label");
+        // label.for = "question";
+        let input = document.createElement("input");
+        input.type = "text";
+        input.name = "answer";
+        input.id = "answer";
+        let linebreak = document.createElement("br");
+        linebreak.id = "answer";
+        // newInput.insertBefore(label, newInput.children[7]);
+        newInput.insertBefore(input, newInput.children[8]);
+        newInput.insertBefore(linebreak, newInput.children[8]);
+        // newInput.appendChild(label);
+        // newInput.appendChild(input);
+    }
 
-function addAnswer() {
-    let newInput = document.getElementById("create_form")
-    // let label = document.createElement("label");
-    // label.for = "question";
-    let input = document.createElement("input");
-    input.type = "text";
-    input.name = "answer";
-    let linebreak = document.createElement("br");
-    // newInput.insertBefore(label, newInput.children[7]);
-    newInput.insertBefore(input, newInput.children[8]);
-    newInput.insertBefore(linebreak, newInput.children[8]);
-    // newInput.appendChild(label);
-    // newInput.appendChild(input);
-}
+    function removeAnswer() {
+        let list = document.querySelectorAll("#answer");
+        let length = list.length;
 
-
+        if (length > 1) {
+            list[length - 1].remove();
+            list[length - 2].remove();
+        }
+    }
 </script>
 
 {% endblock %}
