Added the delete functionality

--- a/poll/templates/teacher.html
+++ b/poll/templates/teacher.html
@@ -3,7 +3,7 @@
 
 <p>Welcome Teacher {{teacher.firstName}} {{teacher.lastName}}! </p>
 <button><a href="{% url 'poll:teacher_create' teacher.id %}">Create Poll</a></button>
-<button><a href="#">Delete Poll</a></button>
+<button><a href="{% url 'poll:teacher_delete' teacher.id %}">Delete Poll</a></button>
 
 
 {% endblock %}
