--- a/poll/templates/base.html
+++ b/poll/templates/base.html
@@ -6,23 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}The Django Poll{% endblock %}</title>
+    
+<style>
+body.first{
+  background-image: url("https://tipsmake.com/data/images/download-a-set-of-marine-theme-wallpapers-for-desktop-picture-11-MHCZGE8c3.jpg");
+  text-align: center;
+  color:white;
+  font-size: 16px;
+}
+
+p.solid {
+  text-align: left;
+  color:white;
+} 
+</style>
+
 </head>
 
-<body>
+<h1> <p class="solid">Django Poll Application</p></h1>
+
+<body class="first">
     <nav>
-        <a href="{% url 'poll:home' %}">Home</a>
-        <a href="{% url 'poll:teacher' 4 %}">Teacher</a>
+        <a href="{% url 'poll:home' %}"><b>Home</b></a>
+        <a href="{% url 'poll:teacher' 4 %}"><b>Teacher</b></a>  
     </nav>
 
     {% block content %}
 
     {% endblock %}
 
-    <hr>
-
-    <footer>
-        This is footer
-    </footer>
 </body>
 
 </html>
