--- a/poll/templates/base.html
+++ b/poll/templates/base.html
@@ -9,7 +9,7 @@
     
 <style>
 body.first{
-  background-image: url("https://tipsmake.com/data/images/download-a-set-of-marine-theme-wallpapers-for-desktop-picture-11-MHCZGE8c3.jpg");
+  background-image: url("https://www.trickscity.com/wp-content/uploads/2016/11/wnYBZZt-1024x640.jpg");
   text-align: center;
   color:white;
   font-size: 16px;
