added comments and readme file

--- a/poll/templates/base.html
+++ b/poll/templates/base.html
@@ -15,7 +15,7 @@ body.first{
   font-size: 16px;
 }
 
-p.solid {
+.solid {
   text-align: left;
   color:white;
 } 
@@ -23,7 +23,7 @@ p.solid {
 
 </head>
 
-<h1> <p class="solid">Django Poll Application</p></h1>
+<h1 class="solid">Django Poll Application</h1>
 
 <body class="first">
     <nav>
