--- a/poll/templates/teacher_create.html
+++ b/poll/templates/teacher_create.html
@@ -16,24 +16,19 @@
     <button onclick="removeAnswer()">Remove Answer</button>
 </div>
 
+<!-- use JavaScript to add or delete answers  -->
 <script type="text/javascript">
     function addAnswer() {
         let newInput = document.getElementById("create_form");
         let answer = document.querySelectorAll("#answer");
-        // let label = document.createElement("label");
-        // label.for = "question";
         let input = document.createElement("input");
         input.type = "text";
         input.name = "answer" + (answer.length + 2) / 2;
         input.id = "answer";
         let linebreak = document.createElement("br");
         linebreak.id = "answer";
-        // newInput.insertBefore(label, newInput.children[7]);
         newInput.insertBefore(input, newInput.children[8]);
         newInput.insertBefore(linebreak, newInput.children[8]);
-        // newInput.appendChild(label);
-        // newInput.appendChild(input);
-
     }
 
     function removeAnswer() {
